--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-clock": "^3.1.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-responsive-modal": "^6.2.0"
