--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react": "17.0.2",
     "react-clock": "^3.1.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.29.0",
-    "react-responsive-modal": "^6.2.0"
+    "react-hook-form": "^7.30.0",
+    "react-image-upload": "^2.0.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-modal": "^6.2.0",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
